--- a/Frontends/MVCWeb/Views/User/Index.cshtml
+++ b/Frontends/MVCWeb/Views/User/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model UserViewModel
 <div class="row">
-    <div class="col-md-10">
+    <div class="col-md-9">
         <div class="card">
             <div class="card-body">
                 <div class="card-title">
@@ -34,6 +34,13 @@
                     </table>
                 </div>
             </div>
+        </div>
+    </div>
+    <div class="col-md-3">
+        <div class="list-group">
+            <a  asp-controller="Courses" asp-action="Index" class="list-group-item list-group-item-action" aria-current="true">
+                Kurslarım
+            </a>
         </div>
     </div>
     <div>
