--- a/Frontends/MVCWeb/Views/_ViewImports.cshtml
+++ b/Frontends/MVCWeb/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using MVCWeb
-@using MVCWeb.Models
+@using MVCWeb.Models;
+@using MVCWeb.Models.Catalog;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
