--- a/Frontends/MVCWeb/Views/Courses/Index.cshtml
+++ b/Frontends/MVCWeb/Views/Courses/Index.cshtml
@@ -8,9 +8,9 @@
         <div class="card">
             <div class="card-body">
                 <div class="card-title">
+                    <a asp-controller="Courses" asp-action="Create" class="btn btn-primary mb-3">kurs oluştur</a>
                     @if (Model.Any())
                     {
-
                         <h5>Kurslar</h5>
                         <table class="table table-striped table-bordered">
                             <thead>
@@ -27,24 +27,32 @@
                                     <th>
                                         Süre
                                     </th>
+                                    <th>
+                                        İşlemler
+                                    </th>
                                 </tr>
                             </thead>
                             <tbody>
                                 @foreach (var course in Model)
                                 {
-                                    <tr>
-                                        <td>
-                                        </td>
-                                        <td>
-                                            @course.Name
-                                        </td>
-                                        <td>
-                                            @course.Price
-                                        </td>
-                                        <td>
-                                            @course.CreatedTime
-                                        </td>
-                                    </tr>
+                                <tr>
+                                    <td>
+                                        @course.Picture
+                                    </td>
+                                    <td>
+                                        @course.Name
+                                    </td>
+                                    <td>
+                                        @course.Price
+                                    </td>
+                                    <td>
+                                        @course.CreatedTime
+                                    </td>
+                                    <td>
+                                        <a asp-controller="Courses" asp-action="Update" asp-route-id="@course.Id" class="btn btn-success btn-sm">Güncelle</a>
+                                    
+                                    </td>
+                                </tr>
                                 }
 
                             </tbody>
