--- a/Frontends/MVCWeb/Views/Courses/Index.cshtml
+++ b/Frontends/MVCWeb/Views/Courses/Index.cshtml
@@ -28,6 +28,9 @@
                                         Süre
                                     </th>
                                     <th>
+                                        Kategori
+                                    </th>
+                                    <th>
                                         İşlemler
                                     </th>
                                 </tr>
@@ -46,11 +49,17 @@
                                         @course.Price
                                     </td>
                                     <td>
+                                        @course.Category.Name
+                                    </td>
+                                    <td>
                                         @course.CreatedTime
                                     </td>
                                     <td>
                                         <a asp-controller="Courses" asp-action="Update" asp-route-id="@course.Id" class="btn btn-success btn-sm">Güncelle</a>
-                                    
+
+                                    </td>
+                                    <td>
+                                        <a asp-controller="Courses" asp-action="Delete" asp-route-id="@course.Id" class="btn btn-danger btn-sm">Sil</a>
                                     </td>
                                 </tr>
                                 }
