--- a/Frontends/MVCWeb/Views/Home/Detail.cshtml
+++ b/Frontends/MVCWeb/Views/Home/Detail.cshtml
@@ -6,26 +6,22 @@
     <div class="col-md-9">
         <div class="card">
             <img src="https://media.istockphoto.com/photos/success-concept-picture-id626945294?k=20&m=626945294&s=612x612&w=0&h=-g1EyFrb8C7wmEaLVc_8v8S_SHxEjaumBKY9Jqu63Kc=" class="card-img-top" />
-                <div class="card-body">
-                    <h5 class="card-title">@Model.Name</h5>
-                    <div class="card-text">
-                        @Model.Description
-                    </div>
+            <div class="card-body">
+                <h5 class="card-title">@Model.Name</h5>
+                <div class="card-text">
+                    @Model.Description
                 </div>
+            </div>
         </div>
     </div>
     <div class="col-md-3">
         <div class="card">
             <div class="card-body">
                 <h5 class="card-title">Fiyat :@Model.Price TL</h5>
-               
                 <div class="d-grid gap-2">
-                    <a href="#" class="btn btn-primary btn-block">Sepete Ekle</a>
+                    <a asp-controller="Basket" asp-action="AddBasketItem" asp-route-courseId="@Model.Id" class="btn btn-primary btn-block">Sepete Ekle</a>
                 </div>
-              
             </div>
-
         </div>
-
     </div>
 </div>
