--- a/Frontends/MVCWeb/Views/_ViewImports.cshtml
+++ b/Frontends/MVCWeb/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using MVCWeb
 @using MVCWeb.Models;
 @using MVCWeb.Models.Catalog;
+@using MVCWeb.Models.Baskets;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
